--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,7 +29,8 @@
             <Label Content="Grader ute" Margin="0,20,0,0"/>
             <TextBox x:Name="degreesTextBox" Height="25"/>
             <Button x:Name="addWeatherDatabtn" Content="Spara Dagens Väder" Height="40" Margin="20" Click="addWeatherDatabtn_Click"/>
-            <Button x:Name="addWeatherDatabtn" Content="Spara Dagens Väder" Height="40" Margin="20" Click="addWeatherDatabtn_Click"/>
+            <Button x:Name="saveDatabtn" Content="Spara Lista" Height="20" Margin="20,0,20,0" Click="saveDatabtn_Click"/>
+            <Button x:Name="loadDatabtn" Content="Ladda Lista" Height="20" Margin="20,10,20,0" Click="loadDatabtn_Click"/>
         </StackPanel>
         <ListView x:Name="weatherList" Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" Grid.ColumnSpan="2" Margin="20" DisplayMemberPath="DisplayData"/>
 
